# bizmanager-pro

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/auth/__tests__/: auth.service.spec.ts
apps/api/src/auth/dto/: auth-response.dto.ts  login.dto.ts
apps/api/src/auth/strategies/: jwt.strategy.ts
apps/api/src/common/decorators/: current-user.decorator.ts  index.ts  roles.decorator.ts
apps/api/src/common/guards/: jwt-auth.guard.ts  roles.guard.ts
apps/api/src/common/interceptors/: audit-log.interceptor.ts
apps/api/src/config/: app.config.ts
apps/api/src/prisma/: prisma.service.ts
apps/mobile/: capacitor.config.ts  nuxt.config.ts  package.json
apps/web/: nuxt.config.ts  package.json  tailwind.config.ts
apps/web/assets/css/: main.css
apps/web/composables/: useApi.ts
apps/web/layouts/: auth.vue  default.vue
apps/web/middleware/: auth.ts
apps/web/pages/: index.vue  login.vue
apps/web/stores/: auth.ts
prisma/: schema.prisma
services/pdf-engine/: Cargo.toml
services/pdf-engine/src/: error.rs  handlers.rs  main.rs  models.rs  pdf.rs
